Fix: Update server code for Vercel deployment

--- a/public/index.html
+++ b/public/index.html
@@ -281,7 +281,7 @@
             };
             formData.append('data', JSON.stringify(playerData));
             
-            // Add the avatar file if it exists
+            // Add the avatar file if selected
             if (avatarFile) {
                 formData.append('avatar', avatarFile);
             }
