--- a/public/index.html
+++ b/public/index.html
@@ -119,38 +119,24 @@
             font-size: 0.9rem;
         }
 
-        .avatar-preview {
+        .avatar-section {
+            position: relative;
             width: 150px;
             height: 150px;
+            margin: 0 auto 2rem;
             border-radius: 50%;
             background-color: rgba(0, 0, 0, 0.05);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin: 1rem auto;
             overflow: hidden;
-            position: relative;
+            cursor: pointer;
+            transition: var(--transition);
         }
 
-        .avatar-preview img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+        .avatar-section:hover {
+            transform: scale(1.02);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         }
 
-        .avatar-preview .placeholder {
-            color: var(--text-secondary);
-            text-align: center;
-            padding: 1rem;
-        }
-
-        .avatar-upload {
-            position: relative;
-            width: 150px;
-            margin: 0 auto;
-        }
-
-        .avatar-upload input[type="file"] {
+        .avatar-section input[type="file"] {
             position: absolute;
             width: 100%;
             height: 100%;
@@ -160,19 +146,50 @@
             cursor: pointer;
         }
 
-        .avatar-upload .upload-button {
+        .avatar-section .placeholder {
             width: 100%;
-            padding: 0.5rem;
-            background-color: var(--primary-color);
-            color: white;
-            border-radius: var(--border-radius);
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            color: var(--text-secondary);
             text-align: center;
-            cursor: pointer;
+            padding: 1rem;
             transition: var(--transition);
         }
 
-        .avatar-upload .upload-button:hover {
-            background-color: #0066CC;
+        .avatar-section:hover .placeholder {
+            background-color: rgba(0, 0, 0, 0.05);
+        }
+
+        .avatar-section img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: var(--transition);
+        }
+
+        .avatar-section:hover img {
+            transform: scale(1.05);
+        }
+
+        .avatar-section .upload-hint {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 0.5rem;
+            text-align: center;
+            font-size: 0.8rem;
+            opacity: 0;
+            transition: var(--transition);
+        }
+
+        .avatar-section:hover .upload-hint {
+            opacity: 1;
         }
     </style>
 </head>
@@ -184,17 +201,13 @@
             </div>
             <div class="card-body">
                 <form id="playerForm">
-                    <div class="avatar-preview" id="avatarPreview">
+                    <div class="avatar-section" id="avatarSection">
+                        <input type="file" id="avatarInput" accept="image/*">
                         <div class="placeholder">
                             <i class="bi bi-person-circle" style="font-size: 3rem;"></i>
-                            <p>No avatar selected</p>
+                            <p>Click to upload avatar</p>
                         </div>
-                    </div>
-                    <div class="avatar-upload">
-                        <div class="upload-button">
-                            <i class="bi bi-upload"></i> Choose Avatar
-                        </div>
-                        <input type="file" id="avatarInput" accept="image/*">
+                        <div class="upload-hint">Drag & drop or click to upload</div>
                     </div>
                     <div class="mb-3">
                         <label for="playerId" class="form-label">Player ID</label>
@@ -228,19 +241,54 @@
         }
 
         // Handle avatar upload
+        const avatarSection = document.getElementById('avatarSection');
         const avatarInput = document.getElementById('avatarInput');
-        const avatarPreview = document.getElementById('avatarPreview');
 
-        avatarInput.addEventListener('change', function(e) {
-            const file = e.target.files[0];
-            if (file) {
-                const reader = new FileReader();
-                reader.onload = function(e) {
-                    avatarPreview.innerHTML = `<img src="${e.target.result}" alt="Player avatar">`;
-                }
-                reader.readAsDataURL(file);
+        // Handle drag and drop
+        avatarSection.addEventListener('dragover', (e) => {
+            e.preventDefault();
+            avatarSection.style.border = '2px dashed var(--primary-color)';
+        });
+
+        avatarSection.addEventListener('dragleave', () => {
+            avatarSection.style.border = 'none';
+        });
+
+        avatarSection.addEventListener('drop', (e) => {
+            e.preventDefault();
+            avatarSection.style.border = 'none';
+            const file = e.dataTransfer.files[0];
+            if (file && file.type.startsWith('image/')) {
+                handleImageUpload(file);
             }
         });
+
+        // Handle click upload
+        avatarInput.addEventListener('change', (e) => {
+            const file = e.target.files[0];
+            if (file) {
+                handleImageUpload(file);
+            }
+        });
+
+        function handleImageUpload(file) {
+            const reader = new FileReader();
+            reader.onload = (e) => {
+                avatarSection.innerHTML = `
+                    <input type="file" id="avatarInput" accept="image/*">
+                    <img src="${e.target.result}" alt="Player avatar">
+                    <div class="upload-hint">Click to change</div>
+                `;
+                // Reattach event listeners
+                document.getElementById('avatarInput').addEventListener('change', (e) => {
+                    const file = e.target.files[0];
+                    if (file) {
+                        handleImageUpload(file);
+                    }
+                });
+            };
+            reader.readAsDataURL(file);
+        }
 
         document.getElementById('playerForm').addEventListener('submit', async function(e) {
             e.preventDefault();
