UI: Simplify avatar upload to button-based approach

--- a/public/index.html
+++ b/public/index.html
@@ -120,142 +120,76 @@
         }
 
         .avatar-section {
-            position: relative;
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+
+        .avatar-preview {
             width: 150px;
             height: 150px;
-            margin: 0 auto 2rem;
             border-radius: 50%;
             background-color: rgba(0, 0, 0, 0.05);
+            margin: 0 auto 1rem;
             overflow: hidden;
-            cursor: pointer;
-            transition: var(--transition);
-            border: 2px dashed rgba(0, 0, 0, 0.1);
-        }
-
-        .avatar-section:hover {
-            transform: scale(1.02);
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            border-color: var(--primary-color);
-        }
-
-        .avatar-section.dragover {
-            border-color: var(--primary-color);
-            background-color: rgba(0, 122, 255, 0.1);
-        }
-
-        .avatar-section input[type="file"] {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            opacity: 0;
-            cursor: pointer;
-        }
-
-        .avatar-section .placeholder {
-            width: 100%;
-            height: 100%;
             display: flex;
-            flex-direction: column;
             align-items: center;
             justify-content: center;
-            color: var(--text-secondary);
-            text-align: center;
-            padding: 1rem;
-            transition: var(--transition);
         }
 
-        .avatar-section:hover .placeholder {
-            background-color: rgba(0, 0, 0, 0.05);
-        }
-
-        .avatar-section img {
+        .avatar-preview img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            transition: var(--transition);
         }
 
-        .avatar-section:hover img {
-            transform: scale(1.05);
-        }
-
-        .avatar-section .upload-hint {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            background-color: rgba(0, 0, 0, 0.7);
-            color: white;
-            padding: 0.5rem;
+        .avatar-preview .placeholder {
+            color: var(--text-secondary);
             text-align: center;
-            font-size: 0.8rem;
-            opacity: 0;
-            transition: var(--transition);
+            padding: 1rem;
         }
 
-        .avatar-section:hover .upload-hint {
-            opacity: 1;
+        .avatar-preview .placeholder i {
+            font-size: 3rem;
+            margin-bottom: 0.5rem;
         }
 
-        .avatar-section .upload-progress {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            height: 4px;
-            background-color: rgba(0, 0, 0, 0.1);
+        .avatar-upload {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .avatar-upload input[type="file"] {
             display: none;
         }
 
-        .avatar-section .bar {
-            height: 100%;
+        .avatar-upload .btn {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 0.5rem 1rem;
+            border-radius: var(--border-radius);
             background-color: var(--primary-color);
-            width: 0;
-            transition: width 0.3s ease;
-        }
-
-        .avatar-section.uploading .upload-progress {
-            display: block;
-        }
-
-        .avatar-section .upload-status {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: rgba(0, 0, 0, 0.8);
             color: white;
-            padding: 0.5rem 1rem;
-            border-radius: var(--border-radius);
-            font-size: 0.9rem;
-            opacity: 0;
+            border: none;
+            cursor: pointer;
             transition: var(--transition);
-            pointer-events: none;
         }
 
-        .avatar-section.uploading .upload-status {
-            opacity: 1;
+        .avatar-upload .btn:hover {
+            background-color: #0066CC;
+            transform: translateY(-1px);
         }
 
-        .avatar-section .error-message {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: rgba(255, 59, 48, 0.9);
-            color: white;
-            padding: 0.5rem 1rem;
-            border-radius: var(--border-radius);
+        .avatar-upload .btn i {
+            font-size: 1.2rem;
+        }
+
+        .avatar-upload .file-name {
             font-size: 0.9rem;
-            opacity: 0;
-            transition: var(--transition);
-            pointer-events: none;
-        }
-
-        .avatar-section.error .error-message {
-            opacity: 1;
+            color: var(--text-secondary);
+            margin-top: 0.5rem;
         }
     </style>
 </head>
@@ -267,18 +201,21 @@
             </div>
             <div class="card-body">
                 <form id="playerForm">
-                    <div class="avatar-section" id="avatarSection">
-                        <input type="file" id="avatarInput" accept="image/*">
-                        <div class="placeholder">
-                            <i class="bi bi-person-circle" style="font-size: 3rem;"></i>
-                            <p>Click to upload avatar</p>
+                    <div class="avatar-section">
+                        <div class="avatar-preview" id="avatarPreview">
+                            <div class="placeholder">
+                                <i class="bi bi-person-circle"></i>
+                                <p>No avatar selected</p>
+                            </div>
                         </div>
-                        <div class="upload-hint">Drag & drop or click to upload</div>
-                        <div class="upload-progress">
-                            <div class="bar"></div>
+                        <div class="avatar-upload">
+                            <label for="avatarInput" class="btn">
+                                <i class="bi bi-upload"></i>
+                                Choose Avatar
+                            </label>
+                            <input type="file" id="avatarInput" accept="image/*">
+                            <div class="file-name" id="fileName"></div>
                         </div>
-                        <div class="upload-status">Uploading...</div>
-                        <div class="error-message">Error uploading image</div>
                     </div>
                     <div class="mb-3">
                         <label for="playerId" class="form-label">Player ID</label>
@@ -312,102 +249,36 @@
         }
 
         // Handle avatar upload
-        const avatarSection = document.getElementById('avatarSection');
         const avatarInput = document.getElementById('avatarInput');
-        const progressBar = avatarSection.querySelector('.upload-progress .bar');
-        const uploadStatus = avatarSection.querySelector('.upload-status');
-        const errorMessage = avatarSection.querySelector('.error-message');
+        const avatarPreview = document.getElementById('avatarPreview');
+        const fileName = document.getElementById('fileName');
 
-        // Handle drag and drop
-        avatarSection.addEventListener('dragover', (e) => {
-            e.preventDefault();
-            avatarSection.classList.add('dragover');
-        });
-
-        avatarSection.addEventListener('dragleave', () => {
-            avatarSection.classList.remove('dragover');
-        });
-
-        avatarSection.addEventListener('drop', (e) => {
-            e.preventDefault();
-            avatarSection.classList.remove('dragover');
-            const file = e.dataTransfer.files[0];
-            if (file && file.type.startsWith('image/')) {
-                handleImageUpload(file);
-            } else {
-                showError('Please upload an image file');
-            }
-        });
-
-        // Handle click upload
-        avatarInput.addEventListener('change', (e) => {
+        avatarInput.addEventListener('change', function(e) {
             const file = e.target.files[0];
             if (file) {
-                handleImageUpload(file);
+                // Validate file size (5MB limit)
+                if (file.size > 5 * 1024 * 1024) {
+                    alert('File size must be less than 5MB');
+                    return;
+                }
+
+                // Validate file type
+                if (!file.type.startsWith('image/')) {
+                    alert('Please select an image file');
+                    return;
+                }
+
+                // Show file name
+                fileName.textContent = file.name;
+
+                // Preview image
+                const reader = new FileReader();
+                reader.onload = function(e) {
+                    avatarPreview.innerHTML = `<img src="${e.target.result}" alt="Player avatar">`;
+                };
+                reader.readAsDataURL(file);
             }
         });
-
-        function showError(message) {
-            errorMessage.textContent = message;
-            avatarSection.classList.add('error');
-            setTimeout(() => {
-                avatarSection.classList.remove('error');
-            }, 3000);
-        }
-
-        function handleImageUpload(file) {
-            // Validate file size (5MB limit)
-            if (file.size > 5 * 1024 * 1024) {
-                showError('File size must be less than 5MB');
-                return;
-            }
-
-            // Show upload progress
-            avatarSection.classList.add('uploading');
-            progressBar.style.width = '0%';
-            uploadStatus.textContent = 'Uploading...';
-
-            // Simulate upload progress
-            let progress = 0;
-            const interval = setInterval(() => {
-                progress += 5;
-                progressBar.style.width = `${progress}%`;
-                if (progress >= 100) {
-                    clearInterval(interval);
-                    // Show success state
-                    uploadStatus.textContent = 'Upload complete!';
-                    setTimeout(() => {
-                        avatarSection.classList.remove('uploading');
-                    }, 1000);
-                }
-            }, 100);
-
-            const reader = new FileReader();
-            reader.onload = (e) => {
-                avatarSection.innerHTML = `
-                    <input type="file" id="avatarInput" accept="image/*">
-                    <img src="${e.target.result}" alt="Player avatar">
-                    <div class="upload-hint">Click to change</div>
-                    <div class="upload-progress">
-                        <div class="bar"></div>
-                    </div>
-                    <div class="upload-status">Uploading...</div>
-                    <div class="error-message">Error uploading image</div>
-                `;
-                // Reattach event listeners
-                document.getElementById('avatarInput').addEventListener('change', (e) => {
-                    const file = e.target.files[0];
-                    if (file) {
-                        handleImageUpload(file);
-                    }
-                });
-            };
-            reader.onerror = () => {
-                showError('Error reading file');
-                avatarSection.classList.remove('uploading');
-            };
-            reader.readAsDataURL(file);
-        }
 
         document.getElementById('playerForm').addEventListener('submit', async function(e) {
             e.preventDefault();
