--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <style>
         :root {
-            --primary-color: #007AFF;
-            --secondary-color: #1D1D1F;
-            --accent-color: #FF2D55;
-            --light-bg: #F5F5F7;
-            --dark-bg: #1D1D1F;
-            --card-bg: rgba(255, 255, 255, 0.8);
-            --text-primary: #1D1D1F;
-            --text-secondary: #86868B;
-            --border-radius: 12px;
+            --primary-color: #6366F1;
+            --primary-hover: #4F46E5;
+            --secondary-color: #1E293B;
+            --accent-color: #F43F5E;
+            --light-bg: #F8FAFC;
+            --dark-bg: #0F172A;
+            --card-bg: rgba(255, 255, 255, 0.9);
+            --text-primary: #1E293B;
+            --text-secondary: #64748B;
+            --border-radius: 16px;
             --transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
         }
 
@@ -24,7 +25,7 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
             line-height: 1.6;
             color: var(--text-primary);
-            background-color: var(--light-bg);
+            background: linear-gradient(135deg, #6366F1 0%, #4F46E5 100%);
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
             min-height: 100vh;
@@ -45,89 +46,82 @@
             background-color: var(--card-bg);
             backdrop-filter: blur(20px);
             -webkit-backdrop-filter: blur(20px);
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
             transition: var(--transition);
         }
 
         .card-header {
             background: none;
             border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-            padding: 1.5rem;
+            padding: 2rem;
         }
 
         .card-header h1 {
             color: var(--text-primary);
-            font-weight: 600;
+            font-weight: 700;
             margin: 0;
-            font-size: 1.8rem;
+            font-size: 2rem;
+            letter-spacing: -0.5px;
+        }
+
+        .card-body {
+            padding: 2rem;
         }
 
         .form-control {
             border-radius: var(--border-radius);
-            padding: 0.8rem 1rem;
-            border: 1px solid rgba(0, 0, 0, 0.1);
+            padding: 1rem 1.25rem;
+            border: 2px solid rgba(0, 0, 0, 0.1);
             background-color: rgba(255, 255, 255, 0.8);
             transition: var(--transition);
+            font-size: 1rem;
         }
 
         .form-control:focus {
             border-color: var(--primary-color);
-            box-shadow: 0 0 0 3px rgba(0, 122, 255, 0.2);
+            box-shadow: 0 0 0 4px rgba(99, 102, 241, 0.1);
+            background-color: white;
         }
 
         .btn-primary {
             background-color: var(--primary-color);
             border: none;
-            padding: 0.8rem 1.5rem;
+            padding: 1rem 2rem;
             border-radius: var(--border-radius);
-            font-weight: 500;
+            font-weight: 600;
             transition: var(--transition);
+            font-size: 1rem;
+            width: 100%;
+            margin-top: 1rem;
         }
 
         .btn-primary:hover {
-            background-color: #0066CC;
-            transform: translateY(-1px);
-        }
-
-        .response-area {
-            background-color: rgba(0, 0, 0, 0.05);
-            border-radius: var(--border-radius);
-            padding: 1rem;
-            margin-top: 1rem;
-            font-family: monospace;
-            white-space: pre-wrap;
-            display: none;
-        }
-
-        .response-area.success {
-            background-color: rgba(52, 199, 89, 0.1);
-            border: 1px solid rgba(52, 199, 89, 0.2);
-        }
-
-        .response-area.error {
-            background-color: rgba(255, 59, 48, 0.1);
-            border: 1px solid rgba(255, 59, 48, 0.2);
+            background-color: var(--primary-hover);
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(99, 102, 241, 0.2);
         }
 
         .form-label {
-            font-weight: 500;
+            font-weight: 600;
             color: var(--text-primary);
+            margin-bottom: 0.5rem;
+            font-size: 0.95rem;
         }
 
         .form-text {
             color: var(--text-secondary);
-            font-size: 0.9rem;
+            font-size: 0.85rem;
             margin-top: 0.25rem;
         }
 
         .avatar-section {
             text-align: center;
-            margin-bottom: 2rem;
+            margin-bottom: 2.5rem;
         }
 
         .avatar-preview {
-            width: 150px;
-            height: 150px;
+            width: 120px;
+            height: 120px;
             border-radius: 50%;
             background-color: rgba(0, 0, 0, 0.05);
             margin: 0 auto 1rem;
@@ -135,6 +129,12 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            border: 2px solid rgba(0, 0, 0, 0.1);
+            transition: var(--transition);
+        }
+
+        .avatar-preview:hover {
+            border-color: var(--primary-color);
         }
 
         .avatar-preview img {
@@ -150,8 +150,9 @@
         }
 
         .avatar-preview .placeholder i {
-            font-size: 3rem;
+            font-size: 2.5rem;
             margin-bottom: 0.5rem;
+            color: var(--text-secondary);
         }
 
         .avatar-upload {
@@ -178,15 +179,35 @@
             cursor: pointer;
             transition: var(--transition);
             font-size: 1.5rem;
+            box-shadow: 0 4px 12px rgba(99, 102, 241, 0.2);
         }
 
         .avatar-upload .btn:hover {
-            background-color: #0066CC;
-            transform: translateY(-1px);
+            background-color: var(--primary-hover);
+            transform: translateY(-2px);
+            box-shadow: 0 6px 16px rgba(99, 102, 241, 0.3);
         }
 
         .avatar-upload .btn i {
             font-size: 1.2rem;
+        }
+
+        .mb-3 {
+            margin-bottom: 1.5rem !important;
+        }
+
+        @media (max-width: 576px) {
+            .card-header {
+                padding: 1.5rem;
+            }
+            
+            .card-body {
+                padding: 1.5rem;
+            }
+
+            .card-header h1 {
+                font-size: 1.75rem;
+            }
         }
     </style>
 </head>
@@ -229,7 +250,6 @@
                     </div>
                     <button type="submit" class="btn btn-primary">Create Player</button>
                 </form>
-                <div id="response" class="response-area"></div>
             </div>
         </div>
     </div>
