Fix: Resolve SVG to PNG conversion variable conflict

--- a/public/index.html
+++ b/public/index.html
@@ -296,7 +296,7 @@
                 
                 // Create a blob from the SVG
                 const svgBlob = new Blob([svgText], { type: 'image/svg+xml' });
-                const svgUrl = URL.createObjectURL(svgBlob);
+                const blobUrl = URL.createObjectURL(svgBlob);
                 
                 // Create an image element
                 const img = new Image();
@@ -313,11 +313,12 @@
                     img.onload = () => {
                         ctx.drawImage(img, 0, 0, 400, 400);
                         canvas.toBlob((blob) => {
+                            URL.revokeObjectURL(blobUrl); // Clean up the blob URL
                             resolve(blob);
                         }, 'image/png');
                     };
                     img.onerror = reject;
-                    img.src = svgUrl;
+                    img.src = blobUrl;
                 });
             } catch (error) {
                 console.error('Error converting SVG to PNG:', error);
