--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,11 @@
             transition: var(--transition);
         }
 
+        .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
+        }
+
         .card-header {
             background: none;
             border-bottom: 1px solid rgba(0, 0, 0, 0.1);
@@ -79,10 +84,18 @@
             height: auto;
         }
 
+        .form-control:hover {
+            border-color: var(--primary-color);
+            background-color: white;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(99, 102, 241, 0.1);
+        }
+
         .form-control:focus {
             border-color: var(--primary-color);
             box-shadow: 0 0 0 4px rgba(99, 102, 241, 0.1);
             background-color: white;
+            transform: translateY(-2px);
         }
 
         .btn-primary {
@@ -95,6 +108,8 @@
             font-size: 1rem;
             width: 100%;
             margin-top: 1rem;
+            position: relative;
+            overflow: hidden;
         }
 
         .btn-primary:hover {
@@ -103,17 +118,49 @@
             box-shadow: 0 4px 12px rgba(99, 102, 241, 0.2);
         }
 
+        .btn-primary:active {
+            transform: translateY(0);
+        }
+
+        .btn-primary::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 0;
+            height: 0;
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 50%;
+            transform: translate(-50%, -50%);
+            transition: width 0.6s, height 0.6s;
+        }
+
+        .btn-primary:hover::after {
+            width: 300px;
+            height: 300px;
+        }
+
         .form-label {
             font-weight: 600;
             color: var(--text-primary);
             margin-bottom: 0.5rem;
             font-size: 0.95rem;
+            transition: var(--transition);
+        }
+
+        .form-control:hover + .form-label {
+            color: var(--primary-color);
         }
 
         .form-text {
             color: var(--text-secondary);
             font-size: 0.85rem;
             margin-top: 0.25rem;
+            transition: var(--transition);
+        }
+
+        .form-control:hover + .form-text {
+            color: var(--primary-color);
         }
 
         .avatar-section {
@@ -133,16 +180,40 @@
             justify-content: center;
             border: 2px solid rgba(0, 0, 0, 0.1);
             transition: var(--transition);
+            position: relative;
         }
 
         .avatar-preview:hover {
             border-color: var(--primary-color);
+            transform: scale(1.05);
+            box-shadow: 0 8px 24px rgba(99, 102, 241, 0.2);
+        }
+
+        .avatar-preview::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(45deg, rgba(99, 102, 241, 0.1), rgba(79, 70, 229, 0.1));
+            opacity: 0;
+            transition: var(--transition);
+        }
+
+        .avatar-preview:hover::before {
+            opacity: 1;
         }
 
         .avatar-preview img {
             width: 100%;
             height: 100%;
             object-fit: cover;
+            transition: var(--transition);
+        }
+
+        .avatar-preview:hover img {
+            transform: scale(1.1);
         }
 
         .avatar-preview .placeholder {
@@ -192,6 +263,7 @@
             height: 2px;
             background-color: white;
             border-radius: 1px;
+            transition: var(--transition);
         }
 
         .avatar-upload .btn::after {
@@ -201,12 +273,18 @@
             height: 20px;
             background-color: white;
             border-radius: 1px;
+            transition: var(--transition);
         }
 
         .avatar-upload .btn:hover {
             background-color: var(--primary-hover);
             transform: translateY(-2px) rotate(90deg);
             box-shadow: 0 6px 16px rgba(99, 102, 241, 0.3);
+        }
+
+        .avatar-upload .btn:hover::before,
+        .avatar-upload .btn:hover::after {
+            background-color: white;
         }
 
         .avatar-upload .btn i {
