--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', 'SF Pro Text', 'Helvetica Neue', Helvetica, Arial, sans-serif;
             line-height: 1.6;
             color: var(--text-primary);
             background: linear-gradient(135deg, #6366F1 0%, #4F46E5 100%);
@@ -68,6 +68,7 @@
             margin: 0;
             font-size: 2rem;
             letter-spacing: -0.5px;
+            font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, sans-serif;
         }
 
         .card-body {
@@ -110,6 +111,7 @@
             margin-top: 1rem;
             position: relative;
             overflow: hidden;
+            font-family: 'SF Pro Text', -apple-system, BlinkMacSystemFont, sans-serif;
         }
 
         .btn-primary:hover {
@@ -146,6 +148,7 @@
             margin-bottom: 0.5rem;
             font-size: 0.95rem;
             transition: var(--transition);
+            font-family: 'SF Pro Text', -apple-system, BlinkMacSystemFont, sans-serif;
         }
 
         .form-control:hover + .form-label {
@@ -157,6 +160,7 @@
             font-size: 0.85rem;
             margin-top: 0.25rem;
             transition: var(--transition);
+            font-family: 'SF Pro Text', -apple-system, BlinkMacSystemFont, sans-serif;
         }
 
         .form-control:hover + .form-text {
