UI: Update avatar preview background to match theme

--- a/public/index.html
+++ b/public/index.html
@@ -176,13 +176,13 @@
             width: 180px;
             height: 180px;
             border-radius: 50%;
-            background-color: rgba(0, 0, 0, 0.05);
+            background: linear-gradient(135deg, rgba(99, 102, 241, 0.1) 0%, rgba(79, 70, 229, 0.1) 100%);
             margin: 0 auto 1rem;
             overflow: hidden;
             display: flex;
             align-items: center;
             justify-content: center;
-            border: 2px solid rgba(0, 0, 0, 0.1);
+            border: 2px solid rgba(99, 102, 241, 0.2);
             transition: var(--transition);
             position: relative;
         }
@@ -191,6 +191,7 @@
             border-color: var(--primary-color);
             transform: scale(1.05);
             box-shadow: 0 8px 24px rgba(99, 102, 241, 0.2);
+            background: linear-gradient(135deg, rgba(99, 102, 241, 0.15) 0%, rgba(79, 70, 229, 0.15) 100%);
         }
 
         .avatar-preview::before {
@@ -229,7 +230,8 @@
         .avatar-preview .placeholder i {
             font-size: 2.5rem;
             margin-bottom: 0.5rem;
-            color: var(--text-secondary);
+            color: var(--primary-color);
+            opacity: 0.5;
         }
 
         .avatar-upload {
