Add UTC+ prefix to time selector input

--- a/public/index.html
+++ b/public/index.html
@@ -358,6 +358,7 @@
                     <div class="mb-3">
                         <label for="refreshOffset" class="form-label">Refresh Offset (Optional)</label>
                         <div class="input-group">
+                            <span class="input-group-text">UTC+</span>
                             <input type="time" class="form-control" id="timeSelect">
                         </div>
                         <input type="hidden" id="refreshOffset" name="refreshOffset">
